third_party/move/move-compiler/tests/move_check/unit_test/cross_module_members_non_test_function2.exp
error[E03004]: unbound type
   ┌─ tests/move_check/unit_test/cross_module_members_non_test_function2.move:25:23
   │
25 │     public fun bad(): Foo {
   │                       ^^^ Unbound type 'Foo' in current scope

